# low-level-learn

./: README.md
c-learn/: CMakeLists.txt  build.zig
c-learn/include/: binarytree.h  car.h  linkedlist.h  logging.h  person.h
c-learn/src/: binarytree.c  car.c  linkedlist.c  logging.c  main.c  person.c
cpp-learn/: CMakeLists.txt  build.zig
cpp-learn/include/: LinkedList.h  Person.h  SmartLinkedList.h
cpp-learn/src/: Person.cpp  main.cpp
